# Lith

./: .clang-format  .gitignore  BufferList.qml  CHANGELOG.md  CMakeLists.txt  Info.plist  Lith.pro  NickList.qml  README.md  Settings.qml  clipboardproxy.cpp  clipboardproxy.h  common.h  datamodel.cpp  datamodel.h  main.cpp  main.qml  qml.qrc  qmlobjectlist.h  settings.cpp  settings.h  uploader.cpp  uploader.h  weechat.cpp  weechat.h
.github/workflows/: codeql.yml  main.yml
Default/: BufferList.qml  BufferListItem.qml  Line.qml  NickListItem.qml
Lith/Core/: cmakedefs.h.in  datamodel.h  messagelistfilter.h  qmlobjectlist.h  reflection.cpp  reflection.h  search.h  settings.h
Lith/Lith/: CMakeLists.txt  main.qml
Lith/Style/: BusyIndicator.qml  Button.qml  CMakeLists.txt  ItemDelegate.qml  ScrollBar.qml  constants.cpp  constants.h
Lith/UI/: CMakeLists.txt  ChannelHeader.qml  ChannelMessageActionMenu.qml  ErrorMessage.qml  HotList.qml  HotListItem.qml  SearchBar.qml  SettingsDialog.qml  SettingsHotlistFormatEditor.qml
Lith/UI/SettingsFields/: Boolean.qml  Integer.qml  MultiLineString.qml
app/: CMakeLists.txt  main.cpp  main.qml  translator.cpp  translator.h
assets/: AppIcon.icns  CMakeLists.txt  Launch.storyboard  assets.qrc  convert_svg.sh  qtquickcontrols2.conf
assets/Assets.xcassets/LithColor.colorset/: Contents.json
assets/icons/: icon.icns
mobile/: BufferList.qml  ChannelHeader.qml  ChannelInputBar.qml  ChannelMessage.qml  ChannelMessageList.qml  ChannelTextInput.qml  ChannelView.qml  ErrorMessage.qml  FrontPage.qml  Message.qml  MessageList.qml  NickList.qml  SettingsDialog.qml  main.qml  mobile.qrc
modules/Lith/Core/: CMakeLists.txt  clipboardproxy.h  cmakedefs.h.in  colortheme.cpp  colortheme.h  colorutils.cpp  colorutils.h  common.h  datamodel.cpp  datamodel.h  formatstringsplitter.cpp  formatstringsplitter.h  formattedstring.cpp  formattedstring.h  lith.cpp  lith.h  lithplatform.cpp  lithplatform.h  logger.cpp  logger.h  messagelistfilter.cpp  messagelistfilter.h  nicklistfilter.h  notificationhandler.h  platform.cpp  platform.h  protocol.cpp  protocol.h  qmlobjectlist.cpp  qmlobjectlist.h  reflection.cpp  reflection.h  replayproxy.cpp  replayproxy.h  search.cpp  search.h  settings.cpp  settings.h  sockethelper.cpp  sockethelper.h  (+6 more)
modules/Lith/Core/test/: CMakeLists.txt  ColorTest.cpp  FormattedStringTest.cpp  ProtocolTest.cpp
modules/Lith/Style/: BusyIndicator.qml  Button.qml  CMakeLists.txt  CheckBox.qml  Dialog.qml  ItemDelegate.qml  Label.qml  LithPalette.qml  RadioButton.qml  ScrollBar.qml  Slider.qml  SpinBox.qml  Switch.qml  TabButton.qml  TextArea.qml  TextField.qml  constants.cpp  constants.h  lith_styleplugin.cpp  lithstyle.cpp  lithstyle.h  liththeme.cpp  liththeme.h
modules/Lith/Style/util/: ButtonBackground.qml  InputBackground.qml
modules/Lith/UI/: BufferList.qml  CMakeLists.txt  ChannelHeader.qml  ChannelInputBar.qml  ChannelMessage.qml  ChannelMessageActionMenu.qml  ChannelMessageList.qml  ChannelMessageThumbnail.qml  ChannelTextInput.qml  ChannelView.qml  DataBrowser.qml  DialogButtons.qml  DropHandler.qml  DynamicDrawer.qml  ErrorMessage.qml  HotList.qml  HotListItem.qml  MainView.qml  NickList.qml  NickListActionMenu.qml  PreviewPopup.qml  ScrollHelper.qml  SearchBar.qml  SettingsDialog.qml  SettingsDialogContents.qml  SettingsHotlistFormatEditor.qml  SettingsInterface.qml  SettingsNetwork.qml  SettingsShortcuts.qml  StatusBar.qml
modules/Lith/UI/SettingsFields/: Base.qml  Boolean.qml  Button.qml  Header.qml  IntSpinBox.qml  RadioList.qml  Slider.qml  String.qml
modules/Lith/UI/util/: ControlPanel.qml  DebugWindow.qml  PaletteSwitch.qml
src/: CMakeLists.txt  clipboardproxy.cpp  clipboardproxy.h  cmakedefs.h.in  common.h  datamodel.cpp  datamodel.h  iosclipboard.h  iosclipboard.mm  iosnotifications.h  iosnotifications.mm  iostextinput.h  iostextinput.mm  lith.cpp  lith.h  logger.cpp  logger.h  main.cpp  notificationhandler.cpp  notificationhandler.h  protocol.cpp  protocol.h  qmlobjectlist.cpp  qmlobjectlist.h  replayproxy.cpp  replayproxy.h  screeninfo.cpp  screeninfo.h  search.cpp  search.h  settings.cpp  settings.h  uploader.cpp  uploader.h  weechat.cpp  weechat.h  windowhelper.cpp  windowhelper.h
src/util/: colortheme.cpp  colortheme.h  formatstringsplitter.cpp  formatstringsplitter.h  formattedstring.cpp  formattedstring.h  messagelistfilter.cpp  messagelistfilter.h  nicklistfilter.cpp  nicklistfilter.h  reflection.cpp  reflection.h  sockethelper.cpp  sockethelper.h  urlmetadata.cpp  urlmetadata.h
style/: ApplicationWindow.qml  Button.qml  CMakeLists.txt  CheckBox.qml  ItemDelegate.qml  Label.qml  Popup.qml  SpinBox.qml  Switch.qml  TextArea.qml  TextField.qml
translations/: .gitignore  CMakeLists.txt  Lith_en.ts
ui/: BufferList.qml  CMakeLists.txt  ChannelHeader.qml  ChannelInputBar.qml  ChannelMessage.qml  ChannelMessageActionMenu.qml  ChannelMessageList.qml  ChannelTextInput.qml  ChannelView.qml  DataBrowser.qml  DebugDialog.qml  DialogButtons.qml  DropHandler.qml  DynamicDrawer.qml  ErrorMessage.qml  HotList.qml  HotListItem.qml  MainView.qml  NickList.qml  NickListActionMenu.qml  PreviewPopup.qml  ScrollHelper.qml  SearchBar.qml  SettingsDialog.qml  SettingsDialogContents.qml  SettingsHotlistFormatEditor.qml  SettingsInterface.qml  SettingsNetwork.qml  SettingsShortcuts.qml  main.qml  ui.qrc
ui/LithStyle/: Button.qml  CheckBox.qml  Dialog.qml  ItemDelegate.qml  Label.qml  ScrollBar.qml  Switch.qml  TabButton.qml  TextArea.qml  TextField.qml  qmldir
ui/SettingsFields/: Base.qml  Button.qml  Header.qml  IntSpinBox.qml  Integer.qml  String.qml
ui/style/: ApplicationWindow.qml  BusyIndicator.qml  Button.qml  CheckBox.qml  Switch.qml  TextField.qml
ui/util/: DebugWindow.qml  PaletteSwitch.qml
